qt/quick/gen_qquickwindow.h

typedef QQuickWindow::GraphicsStateInfo QQuickWindow__GraphicsStateInfo;
typedef struct QAccessibleInterface QAccessibleInterface;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QExposeEvent QExposeEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QHideEvent QHideEvent;
typedef struct QImage QImage;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QQmlIncubationController QQmlIncubationController;
typedef struct QQuickItem QQuickItem;
typedef struct QQuickRenderControl QQuickRenderControl;
typedef struct QQuickWindow QQuickWindow;
typedef struct QQuickWindow__GraphicsStateInfo QQuickWindow__GraphicsStateInfo;
typedef struct QResizeEvent QResizeEvent;
typedef struct QRunnable QRunnable;
typedef struct QSGImageNode QSGImageNode;
typedef struct QSGNinePatchNode QSGNinePatchNode;
typedef struct QSGRectangleNode QSGRectangleNode;
typedef struct QSGRendererInterface QSGRendererInterface;
typedef struct QSGTexture QSGTexture;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QWindow QWindow;
QQuickWindow* QQuickWindow_new();
QQuickWindow* QQuickWindow_new2(QQuickRenderControl* renderControl);
QQuickWindow* QQuickWindow_new3(QWindow* parent);
QMetaObject* QQuickWindow_metaObject(const QQuickWindow* self);
void* QQuickWindow_metacast(QQuickWindow* self, const char* param1);
int QQuickWindow_metacall(QQuickWindow* self, int param1, int param2, void** param3);
struct miqt_string QQuickWindow_tr(const char* s);
struct miqt_string QQuickWindow_trUtf8(const char* s);
QQuickItem* QQuickWindow_contentItem(const QQuickWindow* self);
QQuickItem* QQuickWindow_activeFocusItem(const QQuickWindow* self);
QObject* QQuickWindow_focusObject(const QQuickWindow* self);
QQuickItem* QQuickWindow_mouseGrabberItem(const QQuickWindow* self);
bool QQuickWindow_sendEvent(QQuickWindow* self, QQuickItem* param1, QEvent* param2);
QImage* QQuickWindow_grabWindow(QQuickWindow* self);
void QQuickWindow_setRenderTarget2(QQuickWindow* self, unsigned int fboId, QSize* size);
unsigned int QQuickWindow_renderTargetId(const QQuickWindow* self);
QSize* QQuickWindow_renderTargetSize(const QQuickWindow* self);
void QQuickWindow_resetOpenGLState(QQuickWindow* self);
QQuickWindow__GraphicsStateInfo* QQuickWindow_graphicsStateInfo(QQuickWindow* self);
void QQuickWindow_beginExternalCommands(QQuickWindow* self);
void QQuickWindow_endExternalCommands(QQuickWindow* self);
QQmlIncubationController* QQuickWindow_incubationController(const QQuickWindow* self);
QAccessibleInterface* QQuickWindow_accessibleRoot(const QQuickWindow* self);
QSGTexture* QQuickWindow_createTextureFromImage(const QQuickWindow* self, QImage* image);
QSGTexture* QQuickWindow_createTextureFromImage2(const QQuickWindow* self, QImage* image, int options);
QSGTexture* QQuickWindow_createTextureFromId(const QQuickWindow* self, unsigned int id, QSize* size);
QSGTexture* QQuickWindow_createTextureFromNativeObject(const QQuickWindow* self, int type, const void* nativeObjectPtr, int nativeLayout, QSize* size);
void QQuickWindow_setClearBeforeRendering(QQuickWindow* self, bool enabled);
bool QQuickWindow_clearBeforeRendering(const QQuickWindow* self);
void QQuickWindow_setColor(QQuickWindow* self, QColor* color);
QColor* QQuickWindow_color(const QQuickWindow* self);
bool QQuickWindow_hasDefaultAlphaBuffer();
void QQuickWindow_setDefaultAlphaBuffer(bool useAlpha);
void QQuickWindow_setPersistentOpenGLContext(QQuickWindow* self, bool persistent);
bool QQuickWindow_isPersistentOpenGLContext(const QQuickWindow* self);
void QQuickWindow_setPersistentSceneGraph(QQuickWindow* self, bool persistent);
bool QQuickWindow_isPersistentSceneGraph(const QQuickWindow* self);
bool QQuickWindow_isSceneGraphInitialized(const QQuickWindow* self);
void QQuickWindow_scheduleRenderJob(QQuickWindow* self, QRunnable* job, int schedule);
double QQuickWindow_effectiveDevicePixelRatio(const QQuickWindow* self);
QSGRendererInterface* QQuickWindow_rendererInterface(const QQuickWindow* self);
void QQuickWindow_setSceneGraphBackend(int api);
void QQuickWindow_setSceneGraphBackendWithBackend(struct miqt_string backend);
struct miqt_string QQuickWindow_sceneGraphBackend();
QSGRectangleNode* QQuickWindow_createRectangleNode(const QQuickWindow* self);
QSGImageNode* QQuickWindow_createImageNode(const QQuickWindow* self);
QSGNinePatchNode* QQuickWindow_createNinePatchNode(const QQuickWindow* self);
int QQuickWindow_textRenderType();
void QQuickWindow_setTextRenderType(int renderType);
void QQuickWindow_frameSwapped(QQuickWindow* self);
void QQuickWindow_connect_frameSwapped(QQuickWindow* self, intptr_t slot);
void QQuickWindow_sceneGraphInitialized(QQuickWindow* self);
void QQuickWindow_connect_sceneGraphInitialized(QQuickWindow* self, intptr_t slot);
void QQuickWindow_sceneGraphInvalidated(QQuickWindow* self);
void QQuickWindow_connect_sceneGraphInvalidated(QQuickWindow* self, intptr_t slot);
void QQuickWindow_beforeSynchronizing(QQuickWindow* self);
void QQuickWindow_connect_beforeSynchronizing(QQuickWindow* self, intptr_t slot);
void QQuickWindow_afterSynchronizing(QQuickWindow* self);
void QQuickWindow_connect_afterSynchronizing(QQuickWindow* self, intptr_t slot);
void QQuickWindow_beforeRendering(QQuickWindow* self);
void QQuickWindow_connect_beforeRendering(QQuickWindow* self, intptr_t slot);
void QQuickWindow_afterRendering(QQuickWindow* self);
void QQuickWindow_connect_afterRendering(QQuickWindow* self, intptr_t slot);
void QQuickWindow_afterAnimating(QQuickWindow* self);
void QQuickWindow_connect_afterAnimating(QQuickWindow* self, intptr_t slot);
void QQuickWindow_sceneGraphAboutToStop(QQuickWindow* self);
void QQuickWindow_connect_sceneGraphAboutToStop(QQuickWindow* self, intptr_t slot);
void QQuickWindow_colorChanged(QQuickWindow* self, QColor* param1);
void QQuickWindow_connect_colorChanged(QQuickWindow* self, intptr_t slot);
void QQuickWindow_activeFocusItemChanged(QQuickWindow* self);
void QQuickWindow_connect_activeFocusItemChanged(QQuickWindow* self, intptr_t slot);
void QQuickWindow_sceneGraphError(QQuickWindow* self, int error, struct miqt_string message);
void QQuickWindow_connect_sceneGraphError(QQuickWindow* self, intptr_t slot);
void QQuickWindow_beforeRenderPassRecording(QQuickWindow* self);
void QQuickWindow_connect_beforeRenderPassRecording(QQuickWindow* self, intptr_t slot);
void QQuickWindow_afterRenderPassRecording(QQuickWindow* self);
void QQuickWindow_connect_afterRenderPassRecording(QQuickWindow* self, intptr_t slot);
void QQuickWindow_update(QQuickWindow* self);
void QQuickWindow_releaseResources(QQuickWindow* self);
struct miqt_string QQuickWindow_tr2(const char* s, const char* c);
struct miqt_string QQuickWindow_tr3(const char* s, const char* c, int n);
struct miqt_string QQuickWindow_trUtf82(const char* s, const char* c);
struct miqt_string QQuickWindow_trUtf83(const char* s, const char* c, int n);
QSGTexture* QQuickWindow_createTextureFromId3(const QQuickWindow* self, unsigned int id, QSize* size, int options);
QSGTexture* QQuickWindow_createTextureFromNativeObject5(const QQuickWindow* self, int type, const void* nativeObjectPtr, int nativeLayout, QSize* size, int options);
bool QQuickWindow_override_virtual_metacall(void* self, intptr_t slot);
int QQuickWindow_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QQuickWindow_override_virtual_focusObject(void* self, intptr_t slot);
QObject* QQuickWindow_virtualbase_focusObject(const void* self);
bool QQuickWindow_override_virtual_accessibleRoot(void* self, intptr_t slot);
QAccessibleInterface* QQuickWindow_virtualbase_accessibleRoot(const void* self);
bool QQuickWindow_override_virtual_exposeEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_exposeEvent(void* self, QExposeEvent* param1);
bool QQuickWindow_override_virtual_resizeEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_resizeEvent(void* self, QResizeEvent* param1);
bool QQuickWindow_override_virtual_showEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_showEvent(void* self, QShowEvent* param1);
bool QQuickWindow_override_virtual_hideEvent(void* self, intptr_t slot);
void QQuickWindow_virtualbase_hideEvent(void* self, QHideEvent* param1);
void QQuickWindow_virtualbase_focusInEvent(void* self, QFocusEvent* param1);